# haffman

./: CMakeLists.txt  Makefile  README.md  common.make  decode.make  encode.make  haffmanLib.make
FileDecoder/: CMakeLists.txt  FileDecoder.cpp  FileDecoder.h  main.cpp
FileEncoder/: CMakeLists.txt  FileEncoder.cpp  FileEncoder.h  main.cpp
HaffmanLib/: CMakeLists.txt  CommonTypes.h  ErrLog.cpp  ErrLog.h  FrequencyTable.cpp  FrequencyTable.h  HaffmanDecoder.cpp  HaffmanDecoder.h  HaffmanDecoderImpl.cpp  HaffmanDecoderImpl.h  HaffmanEncoder.cpp  HaffmanEncoder.h  HaffmanEncoderImpl.cpp  HaffmanEncoderImpl.h  HaffmanTree.cpp  HaffmanTree.h  Log.cpp  Log.h  TreeCode.cpp  TreeCode.h  TreeNode.cpp  TreeNode.h
HaffmanLib/HaffmanTree/: HaffmanTree.cpp  HaffmanTree.h  TreeCode.h  TreeNode.cpp  TreeNode.h
HaffmanLib/test/: CMakeLists.txt  DecoderTests.cpp  EncoderTests.cpp  FrequencyTableTests.cpp  main.cpp
libs/googletest/: README.md
libs/googletest/googlemock/: README.md  configure.ac
libs/googletest/googlemock/docs/: CookBook.md  DevGuide.md  FrequentlyAskedQuestions.md
libs/googletest/googletest/: CHANGES  README.md  configure.ac
libs/googletest/googletest/docs/: AdvancedGuide.md  DevGuide.md  FAQ.md  Primer.md  PumpManual.md
libs/googletest/googletest/m4/: gtest.m4
test/: DecoderTests.cpp  EncoderTests.cpp  main.cpp
